updating my syllabus

--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -234,67 +234,6 @@ table tbody tr:nth-child(odd){
 <li>develop proficiency in computing tools used to conduct reproducible statistical analyses, specifically R and Git</li>
 <li>understand the process of data-based research by working on an independent research project</li>
 </ul>
-<h2 id="activities--assessments">Activities &amp; Assessments</h2>
-<p>The following activities and assessments will help you successfully achieve the course learning objectives. By experiencing the course content in different ways, you will not only gain a better understanding of regression analysis, but you will also get experiences that can guide you as you apply what you&rsquo;ve learned in future academic and professional projects.
-<br>
-<br></p>
-<h3 id="homework-25">Homework (25%)</h3>
-<p>In homework, you will apply what you&rsquo;ve learned during lecture and lab to complete data analysis tasks. You may discuss homework assignments with other students; however, homework should be completed and submitted individually. Homework must be typed up using R Markdown and submitted in the appropriate GitHub repository.</p>
-<p>Individual homework extensions will only be given for extenuating circumstances. There must be notification from your academic dean about the need for an extension before the homework deadline. We do not grant extensions after the assignment is due.</p>
-<p>To accommodate unexpected and temporary situations (e.g. interviews and other travel, unusually busy weeks, short term illness, etc.), the lowest homework grade will be dropped at the end of the semester.</p>
-<br> 
-<br>
-<h3 id="labs-15">Labs (15%)</h3>
-<p>In labs, you will apply the concepts discussed in lecture to various data analysis scenarios, with a focus on the computation. You will work on lab assignments in teams, and all team members are expected to contribute equally to the completion of each assignment. You are expected to use the team&rsquo;s repository on the course&rsquo;s GitHub page as the central platform for collaboration. Commits to this repository will be used as a metric of each team member&rsquo;s relative contribution for each lab. You will also be asked to evaluate your team members&rsquo; performance periodically during the semester.</p>
-<p>A portion of each lab grade will be for attending and participating during the lab session. You must attend lab and participate during the lab session to receive credit for the group&rsquo;s lab assignment. If you did not attend lab or did not participate during the lab session, your name should not be included in the final group submission.</p>
-<p>If you miss lab, you should complete lab for partial credit by the regular lab deadline.</p>
-<p>Individual lab extensions will only be given for extenuating circumstances. There must be notification from your academic dean about the need for an extension before the lab deadline. We do not grant extensions after the assignment is due.</p>
-<p>To accommodate unexpected and temporary situations (e.g. interviews and other travel, unusually busy weeks, short term illness, etc.), the lowest lab grade will be dropped at the end of the semester.
-<br>
-<br></p>
-<h3 id="exams-exam-01-20-exam-02-20">Exams (Exam 01: 20%, Exam 02: 20%)</h3>
-<p>The exams are an opportunity to assess the knowledge and skills you’ve learned. They will include both the conceptual and mathematical and conceptual aspects of regression. Both exams will be given during a lecture class period, and you will be permitted to bring one page of hand-written notes to each exam. The exam dates are as follows:</p>
-<ul>
-<li>Exam 01: Wednesday, February 26</li>
-<li>Exam 02: Wednesday, April 15</li>
-</ul>
-<p><strong>Exam dates cannot be changed and no make-up exams will be given.</strong> If you must miss an exam, your absence must be officially excused before the exam due date. If your absence is excused, the missing exam grade will be imputed at the end of the semester based on your performance on other relevant individual coursework.
-<br>
-<br></p>
-<h3 id="final-project-15">Final Project (15%)</h3>
-<p>The purpose of the project is to apply what you’ve learned throughout the semester to analyze an interesting data-based research question using regression. The project will be completed in teams, and each team will present their results during the final exam period, Tuesday, April 28, 9a - 12p.  <strong>Project presentations must be done during the specified period.</strong>
-<br>
-<br></p>
-<h3 id="teamwork--engagement-5">Teamwork &amp; Engagement (5%)</h3>
-<p>This part of the final grade will consist of three components.</p>
-<ul>
-<li>
-<p>Team Feedback Surveys. You will be assigned to diverse teams of 3-4 students based on the results of a Get to Know You survey at the beginning of the semester. These teams will stay consistent throughout the semester (barring extraordinary circumstances). You will primarily work in these teams on lab assignments, the final project, and some in-class activities.</p>
-</li>
-<li>
-<p>Daily Engagement Surveys. After each class you will receive a quick survey of consisting of three questions about engagement in the day&rsquo;s lecture. You are expected to fill out the survey even if you did not attend lecture that day. You are required to complete at least 80% of the daily engagement surveys along with the pre-course and post-course surveys to receive full credit for this component of the grade.</p>
-</li>
-<li>
-<p>In-Class Questions. We will use active learning in class, which will include answering questions through a web browser. You are required to complete at least 75% of these in-class questions to receive full credit for this component of the grade. You will not be graded based on accuracy; however, you should make a earnest attempt at answering the questions, since they will be used in part to give real-time feedback about the class&rsquo;s understanding of the lecture material. You will be identified using your Net Id. It is your responsibility to ensure your Net Id is entered correctly on each survey to receive credit. In-class questions cannot be made up; there is built-in flexibility so you can earn full credit even if you miss multiple lectures.</p>
-</li>
-</ul>
-<br> 
-<br>
-<h3 id="grade-calculation">Grade Calculation</h3>
-<p>The final grade will be calculated as follows:</p>
-<p>{.table .table2 .table-condensed .table-striped .text-left}
-<span></span>     | <span></span><br>
-&mdash;&mdash;&mdash;&ndash;|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;
-Homework | 25%
-Labs | 15%
-Exam 01 | 20%
-Exam 02 | 20%
-Final Project | 15%
-Teamwork &amp; Engagement | 5%</p>
-<p>Class attendance in lecture and lab is a firm expectation; frequent absences or tardiness will be considered a legitimate cause for grade reduction.</p>
-<p>If you have a cumulative numerical average of 90 - 100, you are guaranteed at least an A-, 80 - 89 at least a B-, and 70 - 79 at least a C-. The exact ranges for letter grades will be determined at the end of the semester.
-<br>
-<br></p>
 <h2 id="diversity--inclusion">Diversity &amp; Inclusion</h2>
 <p>It is my intent that students from all diverse backgrounds and perspectives be well-served by this course, that students&rsquo; learning needs be addressed both in and out of class, and that the diversity that the students bring to this class be viewed as a resource, strength and benefit. It is my intent to present materials and activities that are respectful of diversity and in alignment with [Duke’s Commitment to Diversity and Inclusion] (<a href="https://provost.duke.edu/initiatives/commitment-to-diversity-and-inclusion)">https://provost.duke.edu/initiatives/commitment-to-diversity-and-inclusion)</a>. Your suggestions are encouraged and appreciated. Please let me know ways to improve the effectiveness of the course for you personally, or for other students or student groups.</p>
 <p>Furthermore, I would like to create a learning environment for my students that supports a diversity of thoughts, perspectives and experiences, and honors your identities. To help accomplish this:</p>
@@ -316,11 +255,164 @@ This class will use the Testing Center to provide testing accommodations to stud
 <p>There are times may need help with the class that is beyond what can be provided by the teaching team. In those instances, I encourage you to visit the Academic Resource Center. The <a href="https://arc.duke.edu">Academic Resource Center (ARC)</a> offers free services to all students during their undergraduate careers at Duke.  Services include Learning Consultations, Peer Tutoring and Study Groups, ADHD/LD Coaching, Outreach Workshops, and more. Because learning is a process unique to every individual, they work with each student to discover and develop their own academic strategy for success at Duke. Contact the ARC to schedule an appointment. Undergraduates in any year, studying any discipline can benefit! Contact <a href="mailto:arc@duke.edu" title="email"><a href="mailto:ARC@duke.edu">ARC@duke.edu</a></a>, 919-684-5917, 211 Academic Advising Center Building, East Campus – behind Marketplace.
 <br>
 <br></p>
-<h2 id="course-materials">Course Materials</h2>
+<h2 id="course-materials--technology">Course Materials + Technology</h2>
 <p>All lecture notes, assignment instructions, up-to-date schedule, and other course materials may be found on the course website, <a href="http://bit.ly/sta210-sp20">http://bit.ly/sta210-sp20</a>.
 I will periodically send announcements via email, so please check your email regularly. You may also find a copy of announcements on Sakai.</p>
 <br> 
 <br>
+<h2 id="a-week-in-sta-210">A Week in STA 210</h2>
+<ul>
+<li>ADD PICTURE OR CHART THAT MAPS OUT A WEEK OF CLASS!</li>
+</ul>
+<h2 id="activities--assessments">Activities &amp; Assessments</h2>
+<p>The following activities and assessments will help you successfully achieve the course learning objectives. By experiencing the course content in different ways, you will not only gain a better understanding of regression analysis, but you will also get experiences that can guide you as you apply what you&rsquo;ve learned in future academic and professional projects.
+<br>
+<br></p>
+<h3 id="homework">Homework</h3>
+<p>In homework, you will apply what you&rsquo;ve learned during lecture and lab to complete data analysis tasks. You may discuss homework assignments with other students; however, homework should be completed and submitted individually. Homework must be typed up using R Markdown and submitted in the appropriate GitHub repository.</p>
+<p>Individual homework extensions will only be given for extenuating circumstances. There must be notification from your academic dean about the need for an extension before the homework deadline. We do not grant extensions after the assignment is due.</p>
+<p>To accommodate unexpected and temporary situations (e.g. interviews and other travel, unusually busy weeks, short term illness, etc.), the lowest homework grade will be dropped at the end of the semester.</p>
+<br> 
+<br>
+<h3 id="labs">Labs</h3>
+<p>In labs, you will apply the concepts discussed in lecture to various data analysis scenarios, with a focus on the computation. You will work on lab assignments in teams, and all team members are expected to contribute equally to the completion of each assignment. You are expected to use the team&rsquo;s repository on the course&rsquo;s GitHub page as the central platform for collaboration. Commits to this repository will be used as a metric of each team member&rsquo;s relative contribution for each lab. You will also be asked to evaluate your team members&rsquo; performance periodically during the semester.</p>
+<p>A portion of each lab grade will be for attending and participating during the lab session. You must attend lab and participate during the lab session to receive credit for the group&rsquo;s lab assignment. If you did not attend lab or did not participate during the lab session, your name should not be included in the final group submission.</p>
+<p>If you miss lab, you should complete lab for partial credit by the regular lab deadline.</p>
+<p>Individual lab extensions will only be given for extenuating circumstances. There must be notification from your academic dean about the need for an extension before the lab deadline. We do not grant extensions after the assignment is due.</p>
+<p>To accommodate unexpected and temporary situations (e.g. interviews and other travel, unusually busy weeks, short term illness, etc.), the lowest lab grade will be dropped at the end of the semester.
+<br>
+<br></p>
+<h3 id="quizzes">Quizzes</h3>
+<p>The exams are an opportunity to assess the knowledge and skills you’ve learned. They will include both the conceptual and mathematical and conceptual aspects of regression. Both exams will be given during a lecture class period, and you will be permitted to bring one page of hand-written notes to each exam. The exam dates are as follows:</p>
+<ul>
+<li>Exam 01: Wednesday, February 26</li>
+<li>Exam 02: Wednesday, April 15</li>
+</ul>
+<p><strong>Exam dates cannot be changed and no make-up exams will be given.</strong> If you must miss an exam, your absence must be officially excused before the exam due date. If your absence is excused, the missing exam grade will be imputed at the end of the semester based on your performance on other relevant individual coursework.
+<br>
+<br></p>
+<h3 id="final-project">Final Project</h3>
+<p>The purpose of the project is to apply what you’ve learned throughout the semester to analyze an interesting data-based research question using regression. The project will be completed in teams, and each team will present their results during the final exam period, Tuesday, April 28, 9a - 12p.  <strong>Project presentations must be done during the specified period.</strong>
+<br>
+<br></p>
+<h3 id="teamwork--engagement">Teamwork &amp; Engagement</h3>
+<p>This part of the final grade will consist of three components.</p>
+<ul>
+<li>
+<p>Team Feedback Surveys. You will be assigned to diverse teams of 3-4 students based on the results of a Get to Know You survey at the beginning of the semester. These teams will stay consistent throughout the semester (barring extraordinary circumstances). You will primarily work in these teams on lab assignments, the final project, and some in-class activities.</p>
+</li>
+<li>
+<p>Daily Engagement Surveys. After each class you will receive a quick survey of consisting of three questions about engagement in the day&rsquo;s lecture. You are expected to fill out the survey even if you did not attend lecture that day. You are required to complete at least 80% of the daily engagement surveys along with the pre-course and post-course surveys to receive full credit for this component of the grade.</p>
+</li>
+<li>
+<p>In-Class Questions. We will use active learning in class, which will include answering questions through a web browser. You are required to complete at least 75% of these in-class questions to receive full credit for this component of the grade. You will not be graded based on accuracy; however, you should make a earnest attempt at answering the questions, since they will be used in part to give real-time feedback about the class&rsquo;s understanding of the lecture material. You will be identified using your Net Id. It is your responsibility to ensure your Net Id is entered correctly on each survey to receive credit. In-class questions cannot be made up; there is built-in flexibility so you can earn full credit even if you miss multiple lectures.</p>
+</li>
+</ul>
+<br> 
+<br>
+<h3 id="grade-calculation">Grade Calculation</h3>
+<p>The final grade will be calculated as follows:</p>
+<center>
+<table>
+<thead>
+<tr>
+<th><span></span>   Category</th>
+<th><span></span> Percentage</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Quizzes</td>
+<td>35%</td>
+</tr>
+<tr>
+<td>Homework</td>
+<td>25%</td>
+</tr>
+<tr>
+<td>Labs</td>
+<td>15%</td>
+</tr>
+<tr>
+<td>Final Project</td>
+<td>15%</td>
+</tr>
+<tr>
+<td>Participation</td>
+<td>5%</td>
+</tr>
+<tr>
+<td>Stats Experience</td>
+<td>5%</td>
+</tr>
+</tbody>
+</table>
+</center>
+<p>Class attendance in lecture and lab is a firm expectation; frequent absences or tardiness will be considered a legitimate cause for grade reduction.</p>
+<p>Final grade thresholds</p>
+<center>
+<table>
+<thead>
+<tr>
+<th><span></span>   Point Range</th>
+<th><span></span> Letter Grade</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>A</td>
+<td>&gt;= 93</td>
+</tr>
+<tr>
+<td>A-</td>
+<td>90 - 92.99</td>
+</tr>
+<tr>
+<td>B+</td>
+<td>87 - 89.99</td>
+</tr>
+<tr>
+<td>B</td>
+<td>83 - 86.99</td>
+</tr>
+<tr>
+<td>B-</td>
+<td>80 - 82.99</td>
+</tr>
+<tr>
+<td>C+</td>
+<td>77 - 79.99</td>
+</tr>
+<tr>
+<td>C</td>
+<td>73 - 76.99</td>
+</tr>
+<tr>
+<td>C-</td>
+<td>70 - 72.99</td>
+</tr>
+<tr>
+<td>D+</td>
+<td>67 - 69.99</td>
+</tr>
+<tr>
+<td>D</td>
+<td>63 - 66.99</td>
+</tr>
+<tr>
+<td>D-</td>
+<td>60 - 62.99</td>
+</tr>
+<tr>
+<td>F</td>
+<td>&lt; 60</td>
+</tr>
+</tbody>
+</table>
+</center>
+<p>If you have a cumulative numerical average of 90 - 100, you are guaranteed at least an A-, 80 - 89 at least a B-, and 70 - 79 at least a C-. The exact ranges for letter grades will be determined at the end of the semester.
+<br>
+<br></p>
 <h2 id="late-work">Late Work</h2>
 <p>Homework or lab assignments submitted late but within 24 hours of the deadline may be accepted with a 20% penalty. Homework or lab assignments submitted any later will <u>not</u> be accepted.</p>
 <p><strong>Late work will not be accepted for the exams or the final project.</strong>
@@ -341,9 +433,7 @@ I will periodically send announcements via email, so please check your email reg
 <p><strong>No grades will be changed after the final project presentations.</strong></p>
 <br> 
 <br>
-<h2 id="technology">Technology</h2>
-<p>Cell phones and other electronic devices should be turned off or put on silent during class. When you use a laptop, tablet, or comparable device, please ensure that the volume set to mute and the device is only used for class purposes. In general, you should focus on the class discussion/activity at hand and refrain from engaging in other work or outside activities.</p>
-<h2 id="a-week-in-210">A week in 210</h2>
+<h2 id="important-dates">Important dates</h2>
 
       </div>
 
@@ -356,16 +446,16 @@ I will periodically send announcements via email, so please check your email reg
           <nav id="TableOfContents">
   <ul>
     <li><a href="#course-learning-objectives">Course Learning Objectives</a></li>
-    <li><a href="#activities--assessments">Activities &amp; Assessments</a></li>
     <li><a href="#diversity--inclusion">Diversity &amp; Inclusion</a></li>
     <li><a href="#accessibility">Accessibility</a></li>
     <li><a href="#getting-help">Getting Help</a></li>
-    <li><a href="#course-materials">Course Materials</a></li>
+    <li><a href="#course-materials--technology">Course Materials + Technology</a></li>
+    <li><a href="#a-week-in-sta-210">A Week in STA 210</a></li>
+    <li><a href="#activities--assessments">Activities &amp; Assessments</a></li>
     <li><a href="#late-work">Late Work</a></li>
     <li><a href="#academic-honesty">Academic Honesty</a></li>
     <li><a href="#regrade-requests">Regrade Requests</a></li>
-    <li><a href="#technology">Technology</a></li>
-    <li><a href="#a-week-in-210">A week in 210</a></li>
+    <li><a href="#important-dates">Important dates</a></li>
   </ul>
 </nav>
         </div>
