--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -418,7 +418,7 @@ I will periodically send announcements via email, so please check your email reg
 <p><strong>Late work will not be accepted for the exams or the final project.</strong>
 <br>
 <br></p>
-<h2 id="academic-honesty">Academic Honesty</h2>
+<h2 id="academic-honesty--community-pact">Academic Honesty / Community pact</h2>
 <p>By enrolling in this course, you have agreed to abide by and uphold the provisions of the  <a href="https://studentaffairs.duke.edu/conduct/about-us/duke-community-standard">Duke Community Standard</a> as well as the policies specific to this course. Any violations will automatically result in a grade of 0 on the  assignment and will be reported to <a href="https://studentaffairs.duke.edu/conduct">Office of Student Conduct</a> for further action.</p>
 <ul>
 <li>You may not discuss or otherwise work with others on the exams. Unauthorized collaboration or using unauthorized materials will be considered a violation for all students involved. More details will be given closer to the exam date.</li>
@@ -434,6 +434,13 @@ I will periodically send announcements via email, so please check your email reg
 <br> 
 <br>
 <h2 id="important-dates">Important dates</h2>
+<ul>
+<li><strong>Aug 17</strong>: Classes begin</li>
+<li><strong>Aug 28</strong>: Drop/add ends</li>
+<li><strong>Oct 30</strong>: Last day to withdraw with W</li>
+<li><strong>Nov 16</strong>: Classes end</li>
+<li><strong>Nov 21</strong>: Final exam period, 9a - 12p</li>
+</ul>
 
       </div>
 
@@ -453,7 +460,7 @@ I will periodically send announcements via email, so please check your email reg
     <li><a href="#a-week-in-sta-210">A Week in STA 210</a></li>
     <li><a href="#activities--assessments">Activities &amp; Assessments</a></li>
     <li><a href="#late-work">Late Work</a></li>
-    <li><a href="#academic-honesty">Academic Honesty</a></li>
+    <li><a href="#academic-honesty--community-pact">Academic Honesty / Community pact</a></li>
     <li><a href="#regrade-requests">Regrade Requests</a></li>
     <li><a href="#important-dates">Important dates</a></li>
   </ul>
