get schedule updated

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -272,6 +272,18 @@ table tbody tr:nth-child(odd){
         <p>Here, learn what you need to get started with tidymodels in five articles, starting with how to create a model and ending with a beginning-to-end modeling case study. After you are comfortable with these basics, you can <a href="/learn/">learn how to go farther with tidymodels</a>.</p>
 <table class="table schedule" style="max-width:100%">
         <tr>
+                 <td align="right" style="width:18%;text-align:right"></td>
+            <td align="right" style="width:18%;text-align:right"></td>
+            <td style="width:50%;text-align:left"><span class="fake-header-table"></span></td> 
+            <td style="width:8%;text-align:center" class="mid-table-header">Slides</td>
+            <td style="width:8%;text-align:center" class="mid-table-header">Reading</td>
+            <td style="width:8%;text-align:center" class="mid-table-header">Lab</td>
+            <td style="width:8%;text-align:center" class="mid-table-header">AE</td>
+            <td style="width:8%;text-align:center" class="mid-table-header">HW</td>
+            <td style="width:8%;text-align:center" class="mid-table-header">Quiz</td>
+            <td style="width:8%;text-align:center" class="mid-table-header">Project</td>
+        </tr>
+        <tr>
                  <td align="right" style="width:18%;text-align:right">Week 01</td>
             <td align="right" style="width:18%;text-align:right">Mon, Aug 17</td>
             <td style="width:50%;text-align:left">Welcome to STA 210!</td>
@@ -1755,7 +1767,7 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-pencil-ruler fa-lg"></i></font>
             </td>
-        </tr>
+        </tr> 
 </table>
 
         </div>
