--- a/public/home/band_two/index.html
+++ b/public/home/band_two/index.html
@@ -224,7 +224,8 @@ table tbody tr:nth-child(odd){
       <h1 class="article-title">Course info</h1>
 
       <div class="article-content">
-      <h4 id="lectures">Lectures</h4>
+      <p>This is some text to see if this works</p>
+<h4 id="lectures">Lectures</h4>
 <p><font color="#339898"><i class="fas fa-university"></i></font>   Gross Hall 103    <font color="#339898"><i class="fas fa-calendar"></i></font>   Mon and Wed 10:05a - 11:20a
 <br>
 <br></p>
@@ -233,69 +234,7 @@ table tbody tr:nth-child(odd){
 <p>Lab 02     <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #5     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 4:40p - 5:55p</p>
 <p>Lab 03     <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #1     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 4:40p - 5:55p</p>
 <p>Lab 04 Asynchronous</p>
-<h3 id="teaching-team-and-office-hours">Teaching team and office hours</h3>
-<table>
-<thead>
-<tr>
-<th><span></span></th>
-<th><span></span></th>
-<th><span></span></th>
-<th><span></span></th>
-<th><span></span></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Instructor</td>
-<td><a href="http://stat.duke.edu/~mt324/">Prof. Maria Tackett</a></td>
-<td><a href="mailto:maria.tackett@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/matackett" title="GitHub"><i class="fa fa-github"></i></a></td>
-<td>Tue 8:30a - 10a, Thu 10:30a - 12p</td>
-<td>Old Chem 118B</td>
-</tr>
-<tr>
-<td>TAs</td>
-<td><a href="https://stat.duke.edu/people/youngsoo-baek-0">Youngsoo Baek</a></td>
-<td><a href="mailto:youngsoo.baek@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/ybaek" title="GitHub"><i class="fa fa-github"></i></a></td>
-<td>Mon 1p - 3p</td>
-<td>Old Chem 203B</td>
-</tr>
-<tr>
-<td><a href="http://linkedin.com/in/cody-coombs-3b8034158">Cody Coombs</a></td>
-<td><a href="mailto:cody.coombs@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/coombscody" title="GitHub"><i class="fa fa-github"></i></a></td>
-<td>Tue 1p - 3p</td>
-<td>Old Chem 203B</td>
-<td></td>
-</tr>
-<tr>
-<td><a href="https://www.linkedin.com/in/sophie-dalldorf-598a16192/">Sophie Dalldorf</a></td>
-<td><a href="mailto:sophia.dalldorf@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/sophiedalldorf" title="GitHub"><i class="fa fa-github"></i></a></td>
-<td>Fri 1p - 3p</td>
-<td>Old Chem 203B</td>
-<td></td>
-</tr>
-<tr>
-<td><a href="https://stat.duke.edu/people/jonathan-klus">Jonathan Klus</a></td>
-<td><a href="mailto:jonathan.klus@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/jonklus" title="GitHub"><i class="fa fa-github"></i></a></td>
-<td>Mon 3p - 5p</td>
-<td>Old Chem 203B</td>
-<td></td>
-</tr>
-<tr>
-<td><a href="https://www.linkedin.com/in/mattypahren">Matty Pahren</a></td>
-<td><a href="mailto:martha.pahren@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/mpahren" title="GitHub"><i class="fa fa-github"></i></a></td>
-<td>Tue 3p - 5p</td>
-<td>Old Chem 203B</td>
-<td></td>
-</tr>
-<tr>
-<td><a href="https://www.linkedin.com/in/ethan-shen-931010134/">Ethan Shen</a></td>
-<td><a href="mailto:ethan.shen@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/ethann-shen" title="GitHub"><i class="fa fa-github"></i></a></td>
-<td>Wed 3p - 5p</td>
-<td>Old Chem 203B</td>
-<td></td>
-</tr>
-</tbody>
-</table>
+</center>
 
       </div>
 
@@ -394,7 +333,7 @@ table tbody tr:nth-child(odd){
 
     
 
-    
+  
 
   </body>
 </html>
