trying to make homepage work.

--- a/public/home/band_two/index.html
+++ b/public/home/band_two/index.html
@@ -224,7 +224,7 @@ table tbody tr:nth-child(odd){
       <h1 class="article-title">Course info</h1>
 
       <div class="article-content">
-      <p>This is some text to see if this works</p>
+      <h3 id="course-info">Course info</h3>
 <h4 id="lectures">Lectures</h4>
 <p><font color="#339898"><i class="fas fa-university"></i></font>   Gross Hall 103    <font color="#339898"><i class="fas fa-calendar"></i></font>   Mon and Wed 10:05a - 11:20a
 <br>
@@ -232,9 +232,20 @@ table tbody tr:nth-child(odd){
 <h4 id="labs">Labs</h4>
 <p>Lab 01    <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #5     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 3:05p - 4:20p</p>
 <p>Lab 02     <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #5     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 4:40p - 5:55p</p>
-<p>Lab 03     <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #1     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 4:40p - 5:55p</p>
-<p>Lab 04 Asynchronous</p>
-</center>
+<p>Lab 03     <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #1     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 4:40p - 5:55p
+<br>
+<br></p>
+<h3 id="teaching-team-and-office-hours">Teaching team and office hours</h3>
+<p>{.table .table1 .table-condensed .table-striped .text-left}
+<span></span>     | <span></span>     | <span></span>    | <span></span>    |  <span></span>   <br>
+&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;
+Instructor        | <a href="http://stat.duke.edu/~mt324/">Prof. Maria Tackett</a> | <a href="mailto:maria.tackett@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/matackett" title="GitHub"><i class="fa fa-github"></i></a> |Tue 8:30a - 10a, Thu 10:30a - 12p  | Old Chem 118B
+TAs               | <a href="https://stat.duke.edu/people/youngsoo-baek-0">Youngsoo Baek</a> | <a href="mailto:youngsoo.baek@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/ybaek" title="GitHub"><i class="fa fa-github"></i></a> | Mon 1p - 3p | Old Chem 203B
+| <a href="http://linkedin.com/in/cody-coombs-3b8034158">Cody Coombs</a> | <a href="mailto:cody.coombs@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/coombscody" title="GitHub"><i class="fa fa-github"></i></a> | Tue 1p - 3p | Old Chem 203B
+| <a href="https://www.linkedin.com/in/sophie-dalldorf-598a16192/">Sophie Dalldorf</a> | <a href="mailto:sophia.dalldorf@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/sophiedalldorf" title="GitHub"><i class="fa fa-github"></i></a> | Fri 1p - 3p | Old Chem 203B
+| <a href="https://stat.duke.edu/people/jonathan-klus">Jonathan Klus</a> | <a href="mailto:jonathan.klus@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/jonklus" title="GitHub"><i class="fa fa-github"></i></a> | Mon 3p - 5p| Old Chem 203B
+| <a href="https://www.linkedin.com/in/mattypahren">Matty Pahren</a> | <a href="mailto:martha.pahren@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/mpahren" title="GitHub"><i class="fa fa-github"></i></a> | Tue 3p - 5p | Old Chem 203B
+| <a href="https://www.linkedin.com/in/ethan-shen-931010134/">Ethan Shen</a> | <a href="mailto:ethan.shen@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/ethann-shen" title="GitHub"><i class="fa fa-github"></i></a> | Wed 3p - 5p | Old Chem 203B</p>
 
       </div>
 
