homepage is close!

--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@ table tbody tr:nth-child(odd){
 
       <div class="blurb">
         <div class="tagline">
-          STA 210: Regression Analysis
+          Regression Analysis
           </div>
         <div>
           Learn approaches for analyzing multivariate data sets, emphasizing analysis of variance, linear regression, and logistic regression. Learn techniques for checking the appropriateness of proposed models, such as residual analyses and case influence diagnostics, and techniques for selecting models. Gain experience dealing with the challenges that arise in practice through assignments that utilize real-world data. This class emphasizes data analysis over mathematical theory.
@@ -241,101 +241,51 @@ table tbody tr:nth-child(odd){
 
   <div class="band second">
     <div class="bandContent">
-      <div class="blurb">
+      <div class="blurb_2col"> 
         <div class="tagline">
           Course info
         </div>
         <div>
-          <h3 id="course-info">Course info</h3>
-<h4 id="lectures">Lectures</h4>
-<p><font color="#339898"><i class="fas fa-university"></i></font>   Gross Hall 103    <font color="#339898"><i class="fas fa-calendar"></i></font>   Mon and Wed 10:05a - 11:20a
-<br>
-<br></p>
-<h4 id="labs">Labs</h4>
-<p>Lab 01    <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #5     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 3:05p - 4:20p</p>
-<p>Lab 02     <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #5     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 4:40p - 5:55p</p>
-<p>Lab 03     <font color="#339898"><i class="fas fa-university"></i></font>   Link Classroom #1     <font color="#339898"><i class="fas fa-calendar"></i></font>   Thu 4:40p - 5:55p
-<br>
-<br></p>
-<h3 id="teaching-team-and-office-hours">Teaching team and office hours</h3>
-<p>{.table .table1 .table-condensed .table-striped .text-left}
-<span></span>     | <span></span>     | <span></span>    | <span></span>    |  <span></span>   <br>
-&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;|&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;
-Instructor        | <a href="http://stat.duke.edu/~mt324/">Prof. Maria Tackett</a> | <a href="mailto:maria.tackett@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/matackett" title="GitHub"><i class="fa fa-github"></i></a> |Tue 8:30a - 10a, Thu 10:30a - 12p  | Old Chem 118B
-TAs               | <a href="https://stat.duke.edu/people/youngsoo-baek-0">Youngsoo Baek</a> | <a href="mailto:youngsoo.baek@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/ybaek" title="GitHub"><i class="fa fa-github"></i></a> | Mon 1p - 3p | Old Chem 203B
-| <a href="http://linkedin.com/in/cody-coombs-3b8034158">Cody Coombs</a> | <a href="mailto:cody.coombs@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/coombscody" title="GitHub"><i class="fa fa-github"></i></a> | Tue 1p - 3p | Old Chem 203B
-| <a href="https://www.linkedin.com/in/sophie-dalldorf-598a16192/">Sophie Dalldorf</a> | <a href="mailto:sophia.dalldorf@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/sophiedalldorf" title="GitHub"><i class="fa fa-github"></i></a> | Fri 1p - 3p | Old Chem 203B
-| <a href="https://stat.duke.edu/people/jonathan-klus">Jonathan Klus</a> | <a href="mailto:jonathan.klus@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/jonklus" title="GitHub"><i class="fa fa-github"></i></a> | Mon 3p - 5p| Old Chem 203B
-| <a href="https://www.linkedin.com/in/mattypahren">Matty Pahren</a> | <a href="mailto:martha.pahren@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/mpahren" title="GitHub"><i class="fa fa-github"></i></a> | Tue 3p - 5p | Old Chem 203B
-| <a href="https://www.linkedin.com/in/ethan-shen-931010134/">Ethan Shen</a> | <a href="mailto:ethan.shen@duke.edu" title="email"><i class="fa fa-envelope"></i></a>   <a href="https://github.com/ethann-shen" title="GitHub"><i class="fa fa-github"></i></a> | Wed 3p - 5p | Old Chem 203B</p>
-
-        </div>
-      </div>
-    </div> 
-  </div> 
-
-
-
-
-
-
-
-
-  <div class="band third">
-    <div class="bandContent">
-      <div class="blurb">
-        <div class="tagline">
-          Teaching Team and office hours
-          </div>
-        <div>
           <style>
-table {
-  width: 100%;
+
+.row {
+  width:100%;
 }
-</style>
-<center>
-<table>
-<thead>
-<tr>
-<th><span></span></th>
-<th><span></span></th>
-<th><span></span></th>
-<th><span></span></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Instructor</td>
-<td>Maria Tackett</td>
-<td>Email</td>
-<td>Office hours</td>
-</tr>
-<tr>
-<td>TA</td>
-<td>TA 1</td>
-<td>Email</td>
-<td>Office Hours</td>
-</tr>
-<tr>
-<td>TA</td>
-<td>TA 2</td>
-<td>Email</td>
-<td>Office Hours</td>
-</tr>
-<tr>
-<td>TA</td>
-<td>TA 3</td>
-<td>Email</td>
-<td>Office hours</td>
-</tr>
-</tbody>
-</table>
-</center>
+
+.col {
+  float: left;
+  width: 50%;
+  padding: 10px;
+}
+
+</style> 
+<div class="row">
+  <div class = "col">
+<h3 id="lectures">Lectures</h3>
+<p><font color="#339898"><i class="fas fa-calendar"></i></font> Mon and Wed 3:30p - 4:45p</p>
+<h3 id="labs">Labs</h3>
+<p>Lab 01   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Thu 8:30a - 9:45a</p>
+<p>Lab 02   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Thu 12p - 1:15p</p>
+<p>Lab 03   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Thu 5:15p - 6:30p</p>
+<p>Lab 04   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Asynchronous</p>
+</div> 
+<div class = "col">
+<h2 id="instructor">Instructor</h2>
+<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
+<h2 id="teaching-assistants">Teaching Assistants</h2>
+<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
+<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
+<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
+<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
+</div>
+ </div>                  
+
         </div>
       </div>
     </div> 
-  </div> 
 </div> 
+
+
 
 
 
