--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -216,7 +216,7 @@ table tbody tr:nth-child(odd){
 
  
 
-<div class="band padForHeader pushFooter">
+<div class="band padForHeader">
   <div class="bandContent">
     <div class="full splitColumns withMobileMargins">
       <div class="column75">
@@ -478,7 +478,7 @@ I will periodically send announcements via email, so please check your email reg
   <div class="eventTitle">
     <a href="/schedule/"><i class="fas fa-search fa-xs"></i>&nbsp;&nbsp;schedule</a>
   </div>
-  <div class="eventDetails">Explore searchable tables of all tidymodels packages and functions.</div>
+  <div class="eventDetails">This is the course schedule! whoo!</div>
 </div>
 
 
@@ -491,7 +491,7 @@ I will periodically send announcements via email, so please check your email reg
   <div class="eventTitle">
     <a href="/help/"><i class="fas fa-book-open fa-xs"></i>&nbsp;&nbsp;help</a>
   </div>
-  <div class="eventDetails">Study up on statistics and modeling with our comprehensive books.</div>
+  <div class="eventDetails">This is where you&rsquo;ll get help! Whoo!</div>
 </div>
 
 
@@ -504,7 +504,7 @@ I will periodically send announcements via email, so please check your email reg
   <div class="eventTitle">
     <a href="https://www.tidyverse.org/tags/tidymodels/" target="_blank"><i class="fas fa-bullhorn fa-xs"></i>&nbsp;&nbsp;Github</a>
   </div>
-  <div class="eventDetails">Hear the latest about tidymodels packages at the <a href="https://www.tidyverse.org/tags/tidymodels/">tidyverse blog</a>.</div>
+  <div class="eventDetails">These are other tags! whoo!</div>
 </div>
 
 
