--- a/public/home/band_three/index.html
+++ b/public/home/band_three/index.html
@@ -216,7 +216,7 @@ table tbody tr:nth-child(odd){
 
  
 
-<div class="band padForHeader pushFooter">
+<div class="band padForHeader">
   <div class="bandContent">
     <div class="full splitColumns withMobileMargins">
       <div class="column75">
@@ -224,49 +224,7 @@ table tbody tr:nth-child(odd){
       <h1 class="article-title">Teaching Team and office hours</h1>
 
       <div class="article-content">
-      <style>
-table {
-  width: 100%;
-}
-</style>
-<center>
-<table>
-<thead>
-<tr>
-<th><span></span></th>
-<th><span></span></th>
-<th><span></span></th>
-<th><span></span></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Instructor</td>
-<td>Maria Tackett</td>
-<td>Email</td>
-<td>Office hours</td>
-</tr>
-<tr>
-<td>TA</td>
-<td>TA 1</td>
-<td>Email</td>
-<td>Office Hours</td>
-</tr>
-<tr>
-<td>TA</td>
-<td>TA 2</td>
-<td>Email</td>
-<td>Office Hours</td>
-</tr>
-<tr>
-<td>TA</td>
-<td>TA 3</td>
-<td>Email</td>
-<td>Office hours</td>
-</tr>
-</tbody>
-</table>
-</center>
+      
       </div>
 
       </div>
@@ -285,7 +243,7 @@ table {
   <div class="eventTitle">
     <a href="/schedule/"><i class="fas fa-search fa-xs"></i>&nbsp;&nbsp;schedule</a>
   </div>
-  <div class="eventDetails">Explore searchable tables of all tidymodels packages and functions.</div>
+  <div class="eventDetails">This is the course schedule! whoo!</div>
 </div>
 
 
@@ -298,7 +256,7 @@ table {
   <div class="eventTitle">
     <a href="/help/"><i class="fas fa-book-open fa-xs"></i>&nbsp;&nbsp;help</a>
   </div>
-  <div class="eventDetails">Study up on statistics and modeling with our comprehensive books.</div>
+  <div class="eventDetails">This is where you&rsquo;ll get help! Whoo!</div>
 </div>
 
 
@@ -311,7 +269,7 @@ table {
   <div class="eventTitle">
     <a href="https://www.tidyverse.org/tags/tidymodels/" target="_blank"><i class="fas fa-bullhorn fa-xs"></i>&nbsp;&nbsp;Github</a>
   </div>
-  <div class="eventDetails">Hear the latest about tidymodels packages at the <a href="https://www.tidyverse.org/tags/tidymodels/">tidyverse blog</a>.</div>
+  <div class="eventDetails">These are other tags! whoo!</div>
 </div>
 
 
