--- a/public/home/band_two/index.html
+++ b/public/home/band_two/index.html
@@ -216,7 +216,7 @@ table tbody tr:nth-child(odd){
 
  
 
-<div class="band padForHeader pushFooter">
+<div class="band padForHeader">
   <div class="bandContent">
     <div class="full splitColumns withMobileMargins">
       <div class="column75">
@@ -226,20 +226,13 @@ table tbody tr:nth-child(odd){
       <div class="article-content">
       <style>
 
-.row {
-  width:100%;
-}
-
-.col {
+.column {
   float: left;
   width: 50%;
-  padding: 10px;
 }
-
 </style> 
-<div class="row">
-  <div class = "col">
-<h3 id="lectures">Lectures</h3>
+  <div class = "column">
+<h2>Lectures </h2>
 <p><font color="#339898"><i class="fas fa-calendar"></i></font> Mon and Wed 3:30p - 4:45p</p>
 <h3 id="labs">Labs</h3>
 <p>Lab 01   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Thu 8:30a - 9:45a</p>
@@ -247,7 +240,7 @@ table tbody tr:nth-child(odd){
 <p>Lab 03   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Thu 5:15p - 6:30p</p>
 <p>Lab 04   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Asynchronous</p>
 </div> 
-<div class = "col">
+<div class = "column">
 <h2 id="instructor">Instructor</h2>
 <p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
 <h2 id="teaching-assistants">Teaching Assistants</h2>
@@ -256,7 +249,6 @@ table tbody tr:nth-child(odd){
 <p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
 <p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
 </div>
- </div>                  
 
       </div>
 
@@ -287,7 +279,7 @@ table tbody tr:nth-child(odd){
   <div class="eventTitle">
     <a href="/schedule/"><i class="fas fa-search fa-xs"></i>&nbsp;&nbsp;schedule</a>
   </div>
-  <div class="eventDetails">Explore searchable tables of all tidymodels packages and functions.</div>
+  <div class="eventDetails">This is the course schedule! whoo!</div>
 </div>
 
 
@@ -300,7 +292,7 @@ table tbody tr:nth-child(odd){
   <div class="eventTitle">
     <a href="/help/"><i class="fas fa-book-open fa-xs"></i>&nbsp;&nbsp;help</a>
   </div>
-  <div class="eventDetails">Study up on statistics and modeling with our comprehensive books.</div>
+  <div class="eventDetails">This is where you&rsquo;ll get help! Whoo!</div>
 </div>
 
 
@@ -313,7 +305,7 @@ table tbody tr:nth-child(odd){
   <div class="eventTitle">
     <a href="https://www.tidyverse.org/tags/tidymodels/" target="_blank"><i class="fas fa-bullhorn fa-xs"></i>&nbsp;&nbsp;Github</a>
   </div>
-  <div class="eventDetails">Hear the latest about tidymodels packages at the <a href="https://www.tidyverse.org/tags/tidymodels/">tidyverse blog</a>.</div>
+  <div class="eventDetails">These are other tags! whoo!</div>
 </div>
 
 
