--- a/public/lessons/index.html
+++ b/public/lessons/index.html
@@ -215,7 +215,7 @@ table tbody tr:nth-child(odd){
  
 
 
-<div class="band padForHeader pushFooter">
+<div class="band padForHeader">
   <div class="bandContent">
     <div class="full splitColumns withMobileMargins">
       <div class="column75 learn-list">
