--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -215,7 +215,7 @@ table tbody tr:nth-child(odd){
  
 
 
-<div class="band padForHeader pushFooter">
+<div class="band padForHeader">
   <div class="bandContent">
     <div class="full splitColumns withMobileMargins start">
         
