--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -221,7 +221,7 @@ table tbody tr:nth-child(odd){
 
 
 
-<div class="band padForHeader pushFooter">
+<div class="band padForHeader Footer">
   <div class="bandContent">
     <div class="full splitColumns withMobileMargins">
 
