trying to fix format of homepage

--- a/public/index.html
+++ b/public/index.html
@@ -214,6 +214,7 @@ table tbody tr:nth-child(odd){
  
 
 
+<div class = "main main-raised">
 <div id="homeContent">
 
 
@@ -266,10 +267,12 @@ table tbody tr:nth-child(odd){
 <h2 id="instructor">Instructor</h2>
 <p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
 <h2 id="teaching-assistants">Teaching Assistants</h2>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
+<ul>
+<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
+<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
+<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
+<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
+</ul>
 </div>
 
         </div>
@@ -292,7 +295,7 @@ table tbody tr:nth-child(odd){
     </div>
 
 
-  
+
   
   <div class="band third">
     <div class="bandContent">
@@ -343,7 +346,7 @@ table tbody tr:nth-child(odd){
       </div>
     </div> 
 </div> 
-
+</div>
 
         <div id="rStudioFooter" class="band">
           <div class="bandContent">
