--- a/public/home/band_two/index.html
+++ b/public/home/band_two/index.html
@@ -244,10 +244,12 @@ table tbody tr:nth-child(odd){
 <h2 id="instructor">Instructor</h2>
 <p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
 <h2 id="teaching-assistants">Teaching Assistants</h2>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
+<ul>
+<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
+<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
+<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
+<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
+</ul>
 </div>
 
       </div>
